# esp32-project

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/app/: CMakeLists.txt
components/app/inc/: lvgl_demo.h
components/app/src/: lvgl_demo.c
components/device/: CMakeLists.txt
components/device/encoder/: rotary_encoder.c  rotary_encoder.h
components/device/key/: key.c  key.h
components/device/lcd/: lcd.c  lcd.h
components/device/led/: led.c  led.h
components/device/sdcard/: sdcard.c  sdcard.h
components/device/sht30/: sht30.c  sht30.h
components/device/ultrasonic/: ultrasonic.c  ultrasonic.h
components/peripheral/: CMakeLists.txt
components/peripheral/inc/: bsp_adc.h  bsp_exit.h  bsp_i2c.h  bsp_ledc.h  bsp_mcpwm.h  bsp_mqtt.h  bsp_rng.h  bsp_rtc.h  bsp_spi.h  bsp_tcp.h  bsp_temperature_sensor.h  bsp_timer.h  bsp_uart.h  bsp_udp.h  bsp_wdg.h  bsp_wifi.h
components/peripheral/src/: bsp_adc.c  bsp_exit.c  bsp_i2c.c  bsp_ledc.c  bsp_mcpwm.c  bsp_mqtt.c  bsp_rng.c  bsp_rtc.c  bsp_spi.c  bsp_tcp.c  bsp_temperature_sensor.c  bsp_timer.c  bsp_uart.c  bsp_udp.c  bsp_wdg.c  bsp_wifi.c
components/toolkit/: CMakeLists.txt
main/: CMakeLists.txt  main.c
